--- a/app/src/main/res/layout/fragment_movie_review.xml
+++ b/app/src/main/res/layout/fragment_movie_review.xml
@@ -1,11 +1,6 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/listview_reviews"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
-
-</FrameLayout>
+    android:layout_height="match_parent"
+    android:scrollbars="vertical"
+    android:id="@+id/listview_reviews"/>
