--- a/app/src/main/res/layout/fragment_movie_deatil.xml
+++ b/app/src/main/res/layout/fragment_movie_deatil.xml
@@ -70,6 +70,13 @@
                 android:textAppearance="@android:style/TextAppearance.Large"
                 android:id="@+id/movie_user_overview_textview" />
 
+            <android.support.v7.widget.RecyclerView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical"
+                android:id="@+id/listview_trailers"/>
+
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
