--- a/app/src/main/res/layout/list_item_trailer.xml
+++ b/app/src/main/res/layout/list_item_trailer.xml
@@ -2,12 +2,12 @@
 <android.support.v7.widget.CardView
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="180dp"
     android:layout_height="wrap_content">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
@@ -15,9 +15,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
-            android:textSize="26sp"
+            android:textSize="10sp"
             android:textStyle="bold"
-            android:padding="15dp"
+            android:padding="5dp"
             android:id="@+id/movie_trailer_title_textview" />
 
         <ImageView
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:scaleType="fitXY"
             android:adjustViewBounds="true"
-            android:padding="15dp"/>
+            android:padding="5dp"/>
 
     </LinearLayout>
 
