--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -34,7 +34,9 @@
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="50dp" />
+                android:background="?attr/colorPrimary"
+                android:layout_height="50dp"
+                app:tabSelectedTextColor="?android:attr/textColorPrimaryInverseNoDisable" />
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/viewpager"
